slice-06a: align web runtime to apps/network-web

--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint",
+    "dev": "next dev apps/network-web",
+    "build": "next build apps/network-web",
+    "start": "next start apps/network-web",
+    "lint": "eslint apps/network-web/src",
     "seed:reset": "node infrastructure/scripts/seed-reset.mjs",
     "seed:load": "node infrastructure/scripts/seed-load.mjs",
     "seed:live-activity": "node infrastructure/scripts/seed-live-activity.mjs",
