--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "build": "next build apps/network-web",
     "start": "next start apps/network-web",
     "lint": "eslint apps/network-web/src",
+    "hardhat:node": "TS_NODE_PROJECT=tsconfig.hardhat.json hardhat node --hostname 127.0.0.1 --port 8545",
+    "hardhat:deploy-local": "TS_NODE_PROJECT=tsconfig.hardhat.json hardhat run infrastructure/scripts/hardhat/deploy-local.ts --network localhost",
+    "hardhat:verify-local": "TS_NODE_PROJECT=tsconfig.hardhat.json hardhat run infrastructure/scripts/hardhat/verify-local.ts --network localhost",
     "seed:reset": "node infrastructure/scripts/seed-reset.mjs",
     "seed:load": "node infrastructure/scripts/seed-load.mjs",
     "seed:live-activity": "node infrastructure/scripts/seed-live-activity.mjs",
@@ -28,6 +31,10 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
+    "ethers": "6.13.2",
+    "hardhat": "2.22.10",
+    "@nomicfoundation/hardhat-ethers": "3.0.8",
+    "ts-node": "10.9.2",
     "typescript": "^5"
   }
 }
