--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "seed:verify": "node infrastructure/scripts/seed-verify.mjs",
     "db:parity": "node infrastructure/scripts/check-migration-parity.mjs",
     "db:migrate": "node infrastructure/scripts/db-migrate.mjs",
-    "e2e:full": "bash infrastructure/scripts/e2e-full-pass.sh"
+    "e2e:full": "bash infrastructure/scripts/e2e-full-pass.sh",
+    "ops:verify-static-assets": "bash infrastructure/scripts/ops/verify-static-assets.sh"
   },
   "dependencies": {
     "ajv": "8.17.1",
